Adicionei um parágrafo no Index

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,6 +10,7 @@
     <h1>Olá, Mundo!</h1>
     <br>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste eius assumenda eos voluptates! Vero odit doloribus a! Libero repudiandae nobis, ipsa necessitatibus nesciunt, vitae itaque harum quod, ab ut quisquam?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit nostrum iusto architecto dolores! Velit nisi vel ex, quibusdam veritatis dolorem est incidunt aspernatur nam ratione molestias eius quis, explicabo beatae.</p>
     
 </body>
 </html>
